fixed spacing

--- a/app/assets/stylesheets/components/_btn_infringement.scss
+++ b/app/assets/stylesheets/components/_btn_infringement.scss
@@ -19,7 +19,7 @@
 
 .infringement-page-buttons {
   margin-top: 20px;
-  width: 360px;
+  max-width: 160px;
   padding-right: 40px;
   position: sticky;
   top: 20px;
